--- a/pom.xml
+++ b/pom.xml
@@ -90,9 +90,10 @@
         <version>4.4.3</version>
     </dependency>
          <dependency>
-         	<groupId>org.springframework.data</groupId>
-         	<artifactId>spring-data-commons</artifactId>
-         </dependency>
+    <groupId>org.springframework.data</groupId>
+    <artifactId>spring-data-commons</artifactId>
+    <version>1.5.0.RELEASE</version>
+</dependency>
 	</dependencies>
 
 	<build>
